[gd_scene load_steps=3 format=3 uid="uid://c52c16f6wq1vs"]

[ext_resource type="FontFile" uid="uid://o80mfqk5bsi0" path="res://fonts/aAsianNinja.ttf" id="1_hdmo1"]
[ext_resource type="Script" uid="uid://by3xfyk8gxbod" path="res://pause_menu.gd" id="1_nwcfo"]

[node name="PauseMenu" type="Control"]
process_mode = 2
layout_mode = 3
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0
script = ExtResource("1_nwcfo")

[node name="ColorRect" type="ColorRect" parent="."]
layout_mode = 0
offset_right = 255.0
offset_bottom = 184.0
color = Color(0.468723, 0.470072, 0.47376, 1)

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 0
offset_left = 5.0
offset_top = 51.0
offset_right = 249.0
offset_bottom = 177.0
theme_override_constants/separation = 25

[node name="BotonReanudar" type="Button" parent="VBoxContainer"]
layout_mode = 2
theme_override_fonts/font = ExtResource("1_hdmo1")
text = "Reanudar"

[node name="BotonMenuPrincipal" type="Button" parent="VBoxContainer"]
layout_mode = 2
theme_override_fonts/font = ExtResource("1_hdmo1")
text = "Menu principal"

[node name="BotonOpciones" type="Button" parent="VBoxContainer"]
layout_mode = 2
theme_override_fonts/font = ExtResource("1_hdmo1")
text = "Opciones"

[node name="Label" type="Label" parent="."]
layout_mode = 0
offset_left = 7.0
offset_top = 10.0
offset_right = 248.0
offset_bottom = 40.0
theme_override_fonts/font = ExtResource("1_hdmo1")
theme_override_font_sizes/font_size = 30
text = "Pausa"
horizontal_alignment = 1
vertical_alignment = 1
